--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.4",
     "buffer": "^6.0.3",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "react-app-rewired": "^2.2.1", 
     "mqtt": "^4.3.7",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -25,10 +28,10 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
