--- a/package.json
+++ b/package.json
@@ -3,26 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.14",
+    "@mui/material": "^5.14.1",
     "@mui/x-data-grid": "^6.5.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "antd": "^5.6.4",
     "axios": "^1.3.4",
     "buffer": "^6.0.3",
-    "process": "^0.11.10",
-    "stream-browserify": "^3.0.0",
-    "react-app-rewired": "^2.2.1", 
+    "firebase": "^10.1.0",
+    "mdb-react-ui-kit": "^6.1.0",
     "mqtt": "^4.3.7",
     "phosphor-react": "^1.4.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
     "url": "^0.11.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
