--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.6.4",
     "axios": "^1.3.4",
     "buffer": "^6.0.3",
+    "emailjs": "^4.0.3",
     "firebase": "^10.1.0",
     "mdb-react-ui-kit": "^6.1.0",
     "mqtt": "^4.3.7",
@@ -21,10 +22,12 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.0",
     "uuid": "^9.0.0",
