--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
