--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mongodb-js/charts-embed-dom": "^3.2.1",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.14.1",
     "@mui/x-data-grid": "^6.5.0",
@@ -15,6 +16,7 @@
     "antd": "^5.6.4",
     "axios": "^1.3.4",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "emailjs": "^4.0.3",
     "firebase": "^10.1.0",
     "mdb-react-ui-kit": "^6.1.0",
@@ -23,12 +25,14 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
+    "react-chartjs-2": "^5.2.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.0",
